--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,12 +5,16 @@
             "label": "Run Home Assistant on port 9123",
             "type": "shell",
             "command": "container start",
-            "problemMatcher": []
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         },
         {
             "label": "Run Home Assistant configuration against /config",
             "type": "shell",
-            "command": "container check",
+            "command": "container check-config",
             "problemMatcher": []
         },
         {
