--- a/custom_components/aldes/manifest.json
+++ b/custom_components/aldes/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "aldes",
   "name": "Aldes",
-  "version": "2.0.0",
+  "version": "v2.0.0",
   "integration_type": "hub",
   "documentation": "https://github.com/guix77/homeassistant-aldes",
   "issue_tracker": "https://github.com/guix77/homeassistant-aldes/issues",
