--- a/custom_components/aldes/manifest.json
+++ b/custom_components/aldes/manifest.json
@@ -9,5 +9,6 @@
   "integration_type": "hub",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/tiagfernandes/homeassistant-aldes/issues",
-  "version": "v3.0.0"
+  "version": "v3.0.5",
+  "reload": "CONFIG_ENTRY"
 }
