--- a/custom_components/aldes/manifest.json
+++ b/custom_components/aldes/manifest.json
@@ -9,6 +9,9 @@
   "integration_type": "hub",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/tiagfernandes/homeassistant-aldes/issues",
+  "requirements": [
+    "backoff>=2.2.1"
+  ],
   "version": "v3.1.0",
   "reload": "CONFIG_ENTRY"
 }
